# AUDIO.TUI

./: .gitignore  QUICKSTART.md  README.md  __init__.py  app.py  aud  formulario.html  index.html  index2.html  install.ps1  install.sh  pyproject.toml  requirements.txt  setup.py  style.css
assets/: ascii_title.txt
audio_tui.egg-info/: PKG-INFO  SOURCES.txt
core/: __init__.py  audio_engine.py  config.py  equalizer_engine.py  media_control.py  state.py  visualizer_engine.py
docs/: INSTALL.md  SPEAKER_CAPTURE_EXPLAINED.md  SYSTEM_AUDIO_SETUP.md  TROUBLESHOOTING.md
scripts/: configure_audio.sh  fix_output_device.sh  setup_speaker_capture.sh  setup_system_audio.sh
ui/: __init__.py  equalizer.py  file_browser.py  header.py  player_controls.py  playlist.py  status_bar.py  visualizer.py
